--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: '>=3.1.4 <4.0.0'
 
 dependencies:
+  bloc: ^8.1.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +19,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - weather_info.json
+    - assets/images/
